optimize vue.js loading

--- a/src/preview/20170314/component-20170314-AndroidStateBar.html
+++ b/src/preview/20170314/component-20170314-AndroidStateBar.html
@@ -78,7 +78,8 @@
     </div>
   </script>
 
-  <script src="../../lib/vue.js"></script>
+  <!-- <script src="../../lib/vue.min.js"></script> -->
+  <script src="https://unpkg.com/vue"></script>
   <script src="./component-20170314-AndroidStateBar.js"></script>
 </body>
 </html>
