--- a/src/preview/index.html
+++ b/src/preview/index.html
@@ -57,7 +57,8 @@
   </script>
 
 
-  <script src="../lib/vue.min.js"></script>
+  <!--<script src="../lib/vue.min.js"></script>-->
+  <script src="https://unpkg.com/vue"></script>
   <script src="./project.config.js"></script>
 </body>
 </html>
